--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
+    "socket.io-client": "^4.7.5",
+    "vue": "^3.4.25",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
